libqt6c/src/libqlistview.hpp

typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QListView QListView;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QListView* QListView_new(QWidget* parent);
QListView* QListView_new2();
QMetaObject* QListView_MetaObject(const QListView* self);
void QListView_SetMovement(QListView* self, int movement);
int QListView_Movement(const QListView* self);
void QListView_SetFlow(QListView* self, int flow);
int QListView_Flow(const QListView* self);
void QListView_SetWrapping(QListView* self, bool enable);
bool QListView_IsWrapping(const QListView* self);
void QListView_SetResizeMode(QListView* self, int mode);
int QListView_ResizeMode(const QListView* self);
void QListView_SetLayoutMode(QListView* self, int mode);
int QListView_LayoutMode(const QListView* self);
void QListView_SetSpacing(QListView* self, int space);
int QListView_Spacing(const QListView* self);
void QListView_SetBatchSize(QListView* self, int batchSize);
int QListView_BatchSize(const QListView* self);
void QListView_SetGridSize(QListView* self, const QSize* size);
QSize* QListView_GridSize(const QListView* self);
void QListView_SetViewMode(QListView* self, int mode);
int QListView_ViewMode(const QListView* self);
void QListView_ClearPropertyFlags(QListView* self);
bool QListView_IsRowHidden(const QListView* self, int row);
void QListView_SetRowHidden(QListView* self, int row, bool hide);
void QListView_SetModelColumn(QListView* self, int column);
int QListView_ModelColumn(const QListView* self);
void QListView_SetUniformItemSizes(QListView* self, bool enable);
bool QListView_UniformItemSizes(const QListView* self);
void QListView_SetWordWrap(QListView* self, bool on);
bool QListView_WordWrap(const QListView* self);
void QListView_SetSelectionRectVisible(QListView* self, bool show);
bool QListView_IsSelectionRectVisible(const QListView* self);
void QListView_SetItemAlignment(QListView* self, int alignment);
int QListView_ItemAlignment(const QListView* self);
QRect* QListView_VisualRect(const QListView* self, const QModelIndex* index);
void QListView_ScrollTo(QListView* self, const QModelIndex* index, int hint);
QModelIndex* QListView_IndexAt(const QListView* self, const QPoint* p);
void QListView_DoItemsLayout(QListView* self);
void QListView_Reset(QListView* self);
void QListView_SetRootIndex(QListView* self, const QModelIndex* index);
void QListView_IndexesMoved(QListView* self, const libqt_list /* of QModelIndex* */ indexes);
bool QListView_Event(QListView* self, QEvent* e);
void QListView_ScrollContentsBy(QListView* self, int dx, int dy);
void QListView_DataChanged(QListView* self, const QModelIndex* topLeft, const QModelIndex* bottomRight, const libqt_list /* of int */ roles);
void QListView_RowsInserted(QListView* self, const QModelIndex* parent, int start, int end);
void QListView_RowsAboutToBeRemoved(QListView* self, const QModelIndex* parent, int start, int end);
void QListView_MouseMoveEvent(QListView* self, QMouseEvent* e);
void QListView_MouseReleaseEvent(QListView* self, QMouseEvent* e);
void QListView_WheelEvent(QListView* self, QWheelEvent* e);
void QListView_TimerEvent(QListView* self, QTimerEvent* e);
void QListView_ResizeEvent(QListView* self, QResizeEvent* e);
void QListView_DragMoveEvent(QListView* self, QDragMoveEvent* e);
void QListView_DragLeaveEvent(QListView* self, QDragLeaveEvent* e);
void QListView_DropEvent(QListView* self, QDropEvent* e);
void QListView_StartDrag(QListView* self, int supportedActions);
void QListView_InitViewItemOption(const QListView* self, QStyleOptionViewItem* option);
void QListView_PaintEvent(QListView* self, QPaintEvent* e);
int QListView_HorizontalOffset(const QListView* self);
int QListView_VerticalOffset(const QListView* self);
QModelIndex* QListView_MoveCursor(QListView* self, int cursorAction, int modifiers);
void QListView_SetSelection(QListView* self, const QRect* rect, int command);
QRegion* QListView_VisualRegionForSelection(const QListView* self, const QItemSelection* selection);
libqt_list /* of QModelIndex* */ QListView_SelectedIndexes(const QListView* self);
void QListView_UpdateGeometries(QListView* self);
bool QListView_IsIndexHidden(const QListView* self, const QModelIndex* index);
void QListView_SelectionChanged(QListView* self, const QItemSelection* selected, const QItemSelection* deselected);
void QListView_CurrentChanged(QListView* self, const QModelIndex* current, const QModelIndex* previous);
QSize* QListView_ViewportSizeHint(const QListView* self);
void QListView_ResizeContents(QListView* self, int width, int height);
QSize* QListView_ContentsSize(const QListView* self);
QRect* QListView_RectForIndex(const QListView* self, const QModelIndex* index);
void QListView_SetPositionForIndex(QListView* self, const QPoint* position, const QModelIndex* index);
void QListView_Delete(QListView* self);