QtBeef/src/Qt/qlistview.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QListView
// --------------------------------------------------------------
[CRepr]
struct QListView_Ptr: void
{
}
extension CQt
{
	[LinkName("QListView_new")]
	public static extern QListView_Ptr* QListView_new(QWidget_Ptr* parent);
	[LinkName("QListView_new2")]
	public static extern QListView_Ptr* QListView_new2();
	[LinkName("QListView_Delete")]
	public static extern void QListView_Delete(QListView_Ptr* self);
	[LinkName("QListView_MetaObject")]
	public static extern QMetaObject_Ptr* QListView_MetaObject(QListView_Ptr* self);
	[LinkName("QListView_Qt_Metacast")]
	public static extern void* QListView_Qt_Metacast(QListView_Ptr* self, c_char* param1);
	[LinkName("QListView_Qt_Metacall")]
	public static extern c_int QListView_Qt_Metacall(QListView_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QListView_Tr")]
	public static extern libqt_string QListView_Tr(c_char* s);
	[LinkName("QListView_SetMovement")]
	public static extern void QListView_SetMovement(QListView_Ptr* self, void* movement);
	[LinkName("QListView_Movement")]
	public static extern void* QListView_Movement(QListView_Ptr* self);
	[LinkName("QListView_SetFlow")]
	public static extern void QListView_SetFlow(QListView_Ptr* self, void* flow);
	[LinkName("QListView_Flow")]
	public static extern void* QListView_Flow(QListView_Ptr* self);
	[LinkName("QListView_SetWrapping")]
	public static extern void QListView_SetWrapping(QListView_Ptr* self, bool enable);
	[LinkName("QListView_IsWrapping")]
	public static extern bool QListView_IsWrapping(QListView_Ptr* self);
	[LinkName("QListView_SetResizeMode")]
	public static extern void QListView_SetResizeMode(QListView_Ptr* self, void* mode);
	[LinkName("QListView_ResizeMode")]
	public static extern void* QListView_ResizeMode(QListView_Ptr* self);
	[LinkName("QListView_SetLayoutMode")]
	public static extern void QListView_SetLayoutMode(QListView_Ptr* self, void* mode);
	[LinkName("QListView_LayoutMode")]
	public static extern void* QListView_LayoutMode(QListView_Ptr* self);
	[LinkName("QListView_SetSpacing")]
	public static extern void QListView_SetSpacing(QListView_Ptr* self, c_int space);
	[LinkName("QListView_Spacing")]
	public static extern c_int QListView_Spacing(QListView_Ptr* self);
	[LinkName("QListView_SetBatchSize")]
	public static extern void QListView_SetBatchSize(QListView_Ptr* self, c_int batchSize);
	[LinkName("QListView_BatchSize")]
	public static extern c_int QListView_BatchSize(QListView_Ptr* self);
	[LinkName("QListView_SetGridSize")]
	public static extern void QListView_SetGridSize(QListView_Ptr* self, QSize_Ptr* size);
	[LinkName("QListView_GridSize")]
	public static extern QSize_Ptr QListView_GridSize(QListView_Ptr* self);
	[LinkName("QListView_SetViewMode")]
	public static extern void QListView_SetViewMode(QListView_Ptr* self, void* mode);
	[LinkName("QListView_ViewMode")]
	public static extern void* QListView_ViewMode(QListView_Ptr* self);
	[LinkName("QListView_ClearPropertyFlags")]
	public static extern void QListView_ClearPropertyFlags(QListView_Ptr* self);
	[LinkName("QListView_IsRowHidden")]
	public static extern bool QListView_IsRowHidden(QListView_Ptr* self, c_int row);
	[LinkName("QListView_SetRowHidden")]
	public static extern void QListView_SetRowHidden(QListView_Ptr* self, c_int row, bool hide);
	[LinkName("QListView_SetModelColumn")]
	public static extern void QListView_SetModelColumn(QListView_Ptr* self, c_int column);
	[LinkName("QListView_ModelColumn")]
	public static extern c_int QListView_ModelColumn(QListView_Ptr* self);
	[LinkName("QListView_SetUniformItemSizes")]
	public static extern void QListView_SetUniformItemSizes(QListView_Ptr* self, bool enable);
	[LinkName("QListView_UniformItemSizes")]
	public static extern bool QListView_UniformItemSizes(QListView_Ptr* self);
	[LinkName("QListView_SetWordWrap")]
	public static extern void QListView_SetWordWrap(QListView_Ptr* self, bool on);
	[LinkName("QListView_WordWrap")]
	public static extern bool QListView_WordWrap(QListView_Ptr* self);
	[LinkName("QListView_SetSelectionRectVisible")]
	public static extern void QListView_SetSelectionRectVisible(QListView_Ptr* self, bool show);
	[LinkName("QListView_IsSelectionRectVisible")]
	public static extern bool QListView_IsSelectionRectVisible(QListView_Ptr* self);
	[LinkName("QListView_SetItemAlignment")]
	public static extern void QListView_SetItemAlignment(QListView_Ptr* self, void* alignment);
	[LinkName("QListView_ItemAlignment")]
	public static extern void* QListView_ItemAlignment(QListView_Ptr* self);
	[LinkName("QListView_VisualRect")]
	public static extern QRect_Ptr QListView_VisualRect(QListView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QListView_ScrollTo")]
	public static extern void QListView_ScrollTo(QListView_Ptr* self, QModelIndex_Ptr* index, QAbstractItemView_ScrollHint hint);
	[LinkName("QListView_IndexAt")]
	public static extern QModelIndex_Ptr QListView_IndexAt(QListView_Ptr* self, QPoint_Ptr* p);
	[LinkName("QListView_DoItemsLayout")]
	public static extern void QListView_DoItemsLayout(QListView_Ptr* self);
	[LinkName("QListView_Reset")]
	public static extern void QListView_Reset(QListView_Ptr* self);
	[LinkName("QListView_SetRootIndex")]
	public static extern void QListView_SetRootIndex(QListView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QListView_IndexesMoved")]
	public static extern void QListView_IndexesMoved(QListView_Ptr* self, void** indexes);
	[LinkName("QListView_Event")]
	public static extern bool QListView_Event(QListView_Ptr* self, QEvent_Ptr* e);
	[LinkName("QListView_ScrollContentsBy")]
	public static extern void QListView_ScrollContentsBy(QListView_Ptr* self, c_int dx, c_int dy);
	[LinkName("QListView_ResizeContents")]
	public static extern void QListView_ResizeContents(QListView_Ptr* self, c_int width, c_int height);
	[LinkName("QListView_ContentsSize")]
	public static extern QSize_Ptr QListView_ContentsSize(QListView_Ptr* self);
	[LinkName("QListView_DataChanged")]
	public static extern void QListView_DataChanged(QListView_Ptr* self, QModelIndex_Ptr* topLeft, QModelIndex_Ptr* bottomRight, void** roles);
	[LinkName("QListView_RowsInserted")]
	public static extern void QListView_RowsInserted(QListView_Ptr* self, QModelIndex_Ptr* parent, c_int start, c_int end);
	[LinkName("QListView_RowsAboutToBeRemoved")]
	public static extern void QListView_RowsAboutToBeRemoved(QListView_Ptr* self, QModelIndex_Ptr* parent, c_int start, c_int end);
	[LinkName("QListView_MouseMoveEvent")]
	public static extern void QListView_MouseMoveEvent(QListView_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QListView_MouseReleaseEvent")]
	public static extern void QListView_MouseReleaseEvent(QListView_Ptr* self, QMouseEvent_Ptr* e);
	[LinkName("QListView_WheelEvent")]
	public static extern void QListView_WheelEvent(QListView_Ptr* self, QWheelEvent_Ptr* e);
	[LinkName("QListView_TimerEvent")]
	public static extern void QListView_TimerEvent(QListView_Ptr* self, QTimerEvent_Ptr* e);
	[LinkName("QListView_ResizeEvent")]
	public static extern void QListView_ResizeEvent(QListView_Ptr* self, QResizeEvent_Ptr* e);
	[LinkName("QListView_DragMoveEvent")]
	public static extern void QListView_DragMoveEvent(QListView_Ptr* self, QDragMoveEvent_Ptr* e);
	[LinkName("QListView_DragLeaveEvent")]
	public static extern void QListView_DragLeaveEvent(QListView_Ptr* self, QDragLeaveEvent_Ptr* e);
	[LinkName("QListView_DropEvent")]
	public static extern void QListView_DropEvent(QListView_Ptr* self, QDropEvent_Ptr* e);
	[LinkName("QListView_StartDrag")]
	public static extern void QListView_StartDrag(QListView_Ptr* self, void* supportedActions);
	[LinkName("QListView_InitViewItemOption")]
	public static extern void QListView_InitViewItemOption(QListView_Ptr* self, QStyleOptionViewItem_Ptr* option);
	[LinkName("QListView_PaintEvent")]
	public static extern void QListView_PaintEvent(QListView_Ptr* self, QPaintEvent_Ptr* e);
	[LinkName("QListView_HorizontalOffset")]
	public static extern c_int QListView_HorizontalOffset(QListView_Ptr* self);
	[LinkName("QListView_VerticalOffset")]
	public static extern c_int QListView_VerticalOffset(QListView_Ptr* self);
	[LinkName("QListView_MoveCursor")]
	public static extern QModelIndex_Ptr QListView_MoveCursor(QListView_Ptr* self, QAbstractItemView_CursorAction cursorAction, void* modifiers);
	[LinkName("QListView_RectForIndex")]
	public static extern QRect_Ptr QListView_RectForIndex(QListView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QListView_SetPositionForIndex")]
	public static extern void QListView_SetPositionForIndex(QListView_Ptr* self, QPoint_Ptr* position, QModelIndex_Ptr* index);
	[LinkName("QListView_SetSelection")]
	public static extern void QListView_SetSelection(QListView_Ptr* self, QRect_Ptr* rect, void* command);
	[LinkName("QListView_VisualRegionForSelection")]
	public static extern QRegion_Ptr QListView_VisualRegionForSelection(QListView_Ptr* self, QItemSelection_Ptr* selection);
	[LinkName("QListView_SelectedIndexes")]
	public static extern void* QListView_SelectedIndexes(QListView_Ptr* self);
	[LinkName("QListView_UpdateGeometries")]
	public static extern void QListView_UpdateGeometries(QListView_Ptr* self);
	[LinkName("QListView_IsIndexHidden")]
	public static extern bool QListView_IsIndexHidden(QListView_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QListView_SelectionChanged")]
	public static extern void QListView_SelectionChanged(QListView_Ptr* self, QItemSelection_Ptr* selected, QItemSelection_Ptr* deselected);
	[LinkName("QListView_CurrentChanged")]
	public static extern void QListView_CurrentChanged(QListView_Ptr* self, QModelIndex_Ptr* current, QModelIndex_Ptr* previous);
	[LinkName("QListView_ViewportSizeHint")]
	public static extern QSize_Ptr QListView_ViewportSizeHint(QListView_Ptr* self);
	[LinkName("QListView_Tr2")]
	public static extern libqt_string QListView_Tr2(c_char* s, c_char* c);
	[LinkName("QListView_Tr3")]
	public static extern libqt_string QListView_Tr3(c_char* s, c_char* c, c_int n);
}
